# automation

./: .gitignore  README.md  pyproject.toml
jarvis/: __init__.py  assistant.py  config.py  intents.py  io.py  main.py  storage.py
jarvis/skills/: __init__.py  core.py
tests/: test_assistant.py  test_intents.py
